# bible-quiz-serverless

./: .eslintrc.js  .gitignore  README.md  build_lambda.sh  build_prod.sh  local.sh  package.json  tsconfig.json
client/: .env  .firebaserc  package.json  tsconfig.json
client/.firebase/: hosting.YnVpbGQ.cache
client/public/: index.html  manifest.json
client/src/: index.tsx  setupTests.ts
client/src/api/: questions.ts
client/src/components/Footer/: index.tsx  styles.module.scss
client/src/components/Header/: index.tsx  styles.module.scss
client/src/components/Layout/: index.tsx  styles.module.scss
client/src/components/LoadingSpinner/: index.tsx  styles.module.scss
client/src/components/Note/: index.tsx  styles.module.scss
client/src/components/Options/: index.tsx  styles.module.scss
client/src/constants/: types.ts
client/src/hooks/: useInterval.ts
client/src/routes/: index.tsx
client/src/sagas/: index.ts
client/src/store/: index.ts
client/src/styles/: _variables.scss
data-loader/: data.js  index.js  package.json
deployment/: .editorconfig  app.py  cdk.json  pyproject.toml
deployment/gql_api/: app_stack.py
gql-lambda/: Dockerfile  build_lambda.sh
gql-lambda/src/: index.ts
gql-lambda/src/models/: question.ts  response.ts
gql-lambda/src/resolvers/: answerResolver.ts  questionsResolver.ts
gql-lambda/src/schema/: index.ts
gql-lambda/src/tests/: index.test.ts
src/: index.ts
src/mappers/: questionsMapper.ts
src/models/: question.ts
src/resolvers/: greetingsResolver.ts
src/schema/: index.ts
(+12 files in other folders)
